--- a/ClapToFind2017/app/src/main/res/values/strings.xml
+++ b/ClapToFind2017/app/src/main/res/values/strings.xml
@@ -8,4 +8,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="setting_fragment">Setting fragment</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
